[package]
name = "bstools"
version = "0.1.0"
authors = ["Bryan Scriven <bscriven@gmail.com>"]
edition = "2021"
description = "A command line utility that allows other command line utilities and scripts to be conveniently organized, located, and executed."
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bs"
path = "src/main.rs"

[dependencies]
